samples/_failures_safe/1761161095_b2b8f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e9e3068.c: In function ‘main’:
./samples/SAFE/__tmp_7e9e3068.c:172:13: error: used struct type value where scalar is required
  172 |         if (sm
      |             ^~
./samples/SAFE/__tmp_7e9e3068.c:172:15: error: expected ‘)’ at end of input
  172 |         if (sm
      |            ~  ^
      |               )
./samples/SAFE/__tmp_7e9e3068.c:172:9: error: expected declaration or statement at end of input
  172 |         if (sm
      |         ^~
./samples/SAFE/__tmp_7e9e3068.c:172:9: error: expected declaration or statement at end of input
